--- a/eoffice_korem/src/main/res/layout/item_surat_masuk.xml
+++ b/eoffice_korem/src/main/res/layout/item_surat_masuk.xml
@@ -2,12 +2,12 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cv_ethernet"
+    android:id="@+id/cv_surat_masuk"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="6dp"
     android:foreground="?android:attr/selectableItemBackground"
-    app:cardBackgroundColor="@color/md_grey_200"
+    app:cardBackgroundColor="?attr/colorSecondaryContainer"
     app:cardCornerRadius="8dp"
     app:elevation="8dp">
 
@@ -22,8 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-black"
-            android:text=""
-            android:textColor="@color/black"
+            android:textColor="?attr/colorOnSecondaryContainer"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -35,7 +34,7 @@
             android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
             android:text="@string/dispo_penerima"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorOnSecondaryContainer"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_sm_nomor_agenda" />
@@ -47,7 +46,7 @@
             android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
             android:text="@string/sm_bentuk"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorOnSecondaryContainer"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_sm_penerima" />
@@ -59,7 +58,7 @@
             android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
             android:text="@string/sm_sumber"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorOnSecondaryContainer"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_sm_bentuk" />
@@ -69,7 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="4dp"
-            android:background="#c0c0c0"
+            android:background="?attr/colorOnSurface"
             app:layout_constraintTop_toBottomOf="@+id/tv_sm_sumber"
             tools:layout_editor_absoluteX="12dp" />
 
@@ -80,7 +79,7 @@
             android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
             android:text="@string/pengaduan_createddate_view"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorOnSecondaryContainer"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/separator1" />
@@ -90,7 +89,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="4dp"
-            android:background="#c0c0c0"
+            android:background="?attr/colorOnSurface"
             app:layout_constraintTop_toBottomOf="@+id/tv_sm_dibuat"
             tools:layout_editor_absoluteX="12dp" />
 
@@ -101,7 +100,7 @@
             android:layout_marginTop="10dp"
             android:fontFamily="sans-serif-black"
             android:text="@string/cuti_status_view"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorOnSecondaryContainer"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/separator2" />
@@ -125,7 +124,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_corner"
-                android:backgroundTint="@color/secondaryColor"
+                android:backgroundTint="?attr/colorTertiary"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -137,6 +136,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:background="@drawable/rounded_corner"
+                    android:backgroundTint="?attr/colorOnTertiary"
                     android:gravity="center"
                     android:orientation="horizontal"
                     android:padding="6dp">
@@ -146,7 +146,7 @@
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/icon_teruskan_surat"
                         android:src="@drawable/ic_mail_forward"
-                        app:tint="@color/secondaryDarkColor" />
+                        app:tint="?attr/colorTertiary" />
 
                 </LinearLayout>
 
@@ -156,7 +156,7 @@
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"
                     android:text="@string/teruskan_surat"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorOnTertiary"
                     android:textSize="16sp" />
 
             </LinearLayout>
@@ -167,7 +167,7 @@
                 android:layout_height="60dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_corner"
-                android:backgroundTint="@color/md_grey_500"
+                android:backgroundTint="?attr/colorTertiary"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:gravity="center">
 
@@ -176,6 +176,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:background="@drawable/rounded_corner"
+                    android:backgroundTint="?attr/colorOnTertiary"
                     android:gravity="center"
                     android:orientation="horizontal"
                     android:padding="6dp">
@@ -185,7 +186,7 @@
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/icon_riwayat_disposisi"
                         android:src="@drawable/ic_clipboard"
-                        app:tint="@color/md_grey_500" />
+                        app:tint="?attr/colorTertiary" />
 
                 </LinearLayout>
 
@@ -195,7 +196,7 @@
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"
                     android:text="@string/riwayat_disposisi"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorOnTertiary"
                     android:textSize="16sp" />
 
             </LinearLayout>
@@ -221,7 +222,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_corner"
-                android:backgroundTint="@color/primaryColor"
+                android:backgroundTint="?attr/colorTertiary"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:gravity="center"
                 android:orientation="horizontal">
@@ -231,6 +232,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:background="@drawable/rounded_corner"
+                    android:backgroundTint="?attr/colorOnTertiary"
                     android:gravity="center"
                     android:orientation="horizontal"
                     android:padding="6dp">
@@ -240,7 +242,7 @@
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/icon_disposisi_surat"
                         android:src="@drawable/ic_approve"
-                        app:tint="@color/primaryDarkColor" />
+                        app:tint="?attr/colorTertiary" />
 
                 </LinearLayout>
 
@@ -250,7 +252,7 @@
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"
                     android:text="@string/disposisikan"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorOnTertiary"
                     android:textSize="16sp" />
 
             </LinearLayout>
@@ -261,7 +263,7 @@
                 android:layout_height="60dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_corner"
-                android:backgroundTint="@color/md_blue_700"
+                android:backgroundTint="?attr/colorTertiary"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:gravity="center">
 
@@ -270,6 +272,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:background="@drawable/rounded_corner"
+                    android:backgroundTint="?attr/colorOnTertiary"
                     android:gravity="center"
                     android:orientation="horizontal"
                     android:padding="6dp">
@@ -279,7 +282,7 @@
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/icon_surat_image"
                         android:src="@drawable/ic_image"
-                        app:tint="@color/md_blue_900" />
+                        app:tint="?attr/colorTertiary" />
 
                 </LinearLayout>
 
@@ -289,7 +292,7 @@
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"
                     android:text="@string/gambar_surat"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorOnTertiary"
                     android:textSize="16sp" />
 
             </LinearLayout>
