--- a/Staff/src/main/res/layout/activity_edit_profile.xml
+++ b/Staff/src/main/res/layout/activity_edit_profile.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="24dp"
     android:scrollbars="none"
     tools:context=".settings.EditProfileActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp">
 
         <LinearLayout
             android:id="@+id/ll_header"
@@ -18,6 +18,8 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/img_profile"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -27,6 +29,8 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:contentDescription="@string/btn_back"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
                 android:src="@drawable/ic_back"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -41,41 +45,41 @@
 
         </LinearLayout>
 
-        <!--        <com.makeramen.roundedimageview.RoundedImageView-->
-        <!--            android:id="@+id/img_profile"-->
-        <!--            android:layout_width="130dp"-->
-        <!--            android:layout_height="130dp"-->
-        <!--            android:layout_marginTop="16dp"-->
-        <!--            android:src="@drawable/ic_profile"-->
-        <!--            android:tint="@color/primaryColor"-->
-        <!--            app:layout_constraintEnd_toEndOf="parent"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toBottomOf="@id/ll_header"-->
-        <!--            app:riv_corner_radius="10dp" />-->
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/img_profile"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_marginTop="70dp"
+            android:src="@drawable/ic_profile"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:riv_corner_radius="10dp" />
 
-        <!--        <TextView-->
-        <!--            android:id="@+id/btn_change_img"-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_gravity="center"-->
-        <!--            android:layout_marginTop="8dp"-->
-        <!--            android:text="@string/change_photo"-->
-        <!--            android:textColor="@color/secondaryLightColor"-->
-        <!--            android:textSize="18sp"-->
-        <!--            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"-->
-        <!--            app:layout_constraintEnd_toEndOf="parent"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toBottomOf="@+id/img_profile" />-->
+        <TextView
+            android:id="@+id/btn_change_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:text="@string/change_photo"
+            android:textColor="@color/secondaryLightColor"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_profile" />
 
         <LinearLayout
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="24dp"
             android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ll_header">
+            app:layout_constraintTop_toBottomOf="@+id/btn_change_img">
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
