--- a/Staff/src/main/res/layout/activity_monitoring.xml
+++ b/Staff/src/main/res/layout/activity_monitoring.xml
@@ -11,9 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="18dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/rv_ethernet"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -23,6 +24,8 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:contentDescription="@string/btn_back"
+            android:minWidth="48dp"
+            android:minHeight="48dp"
             android:src="@drawable/ic_back"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -42,19 +45,18 @@
         android:layout_width="match_parent"
         android:layout_height="62dp"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/bg_ethernet"
         app:layout_constraintBottom_toTopOf="@+id/rv_user_dc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_header"
         tools:listitem="@layout/item_ethernet" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_user_dc"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="130dp"
         android:paddingHorizontal="24dp"
         android:paddingVertical="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -87,65 +89,116 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/rv_user_dc" />
 
-    <com.github.clans.fab.FloatingActionMenu
-        android:id="@+id/menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:padding="10dp"
+    <com.nambimobile.widgets.efab.ExpandableFabLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:menu_animationDelayPerItem="50"
-        app:menu_buttonSpacing="0dp"
-        app:menu_colorNormal="@color/secondaryColor"
-        app:menu_colorPressed="@color/secondaryDarkColor"
-        app:menu_colorRipple="@color/secondaryColor"
-        app:menu_fab_size="normal"
-        app:menu_icon="@drawable/ic_filter"
-        app:menu_labels_colorNormal="@color/primaryDarkColor"
-        app:menu_labels_cornerRadius="8dp"
-        app:menu_labels_ellipsize="none"
-        app:menu_labels_hideAnimation="@anim/fab_scale_down"
-        app:menu_labels_margin="0dp"
-        app:menu_labels_maxLines="-1"
-        app:menu_labels_padding="8dp"
-        app:menu_labels_position="left"
-        app:menu_labels_showAnimation="@anim/fab_scale_up"
-        app:menu_labels_showShadow="true"
-        app:menu_labels_singleLine="false"
-        app:menu_labels_textColor="#FFFFFF"
-        app:menu_labels_textSize="14sp"
-        app:menu_openDirection="up"
-        app:menu_shadowColor="#66000000"
-        app:menu_shadowRadius="4dp"
-        app:menu_shadowXOffset="1dp"
-        app:menu_shadowYOffset="3dp"
-        app:menu_showShadow="true">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <com.github.clans.fab.FloatingActionButton
+        <com.nambimobile.widgets.efab.Overlay
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:overlay_alpha="0.75"
+            app:overlay_color="#515151"
+            app:overlay_openingAnimationDurationMs="200" />
+
+        <com.nambimobile.widgets.efab.ExpandableFab
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="12dp"
+            app:efab_closingAnticipateTension="0"
+            app:efab_fabOptionSize="custom"
+            app:efab_firstFabOptionMarginPx="150"
+            app:efab_icon="@drawable/ic_filter"
+            app:efab_iconAnimationRotationDeg="90"
+            app:efab_size="custom"
+            app:efab_successiveFabOptionMarginPx="120"
+            app:fabCustomSize="65dp"
+            app:maxImageSize="32dp" />
+
+        <com.nambimobile.widgets.efab.FabOption
             android:id="@+id/fab_isolation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_block_user"
-            app:fab_colorNormal="@color/primaryColor"
-            app:fab_colorPressed="@color/primaryDarkColor"
-            app:fab_colorRipple="@color/primaryColor"
-            app:fab_label="User Isolir"
-            app:fab_size="normal" />
+            app:fab_icon="@drawable/ic_block_user"
+            app:label_backgroundColor="@color/secondaryColor"
+            app:label_text="User Isolir"
+            app:label_textColor="@color/white"
+            app:maxImageSize="30dp" />
 
-        <com.github.clans.fab.FloatingActionButton
+        <com.nambimobile.widgets.efab.FabOption
             android:id="@+id/fab_disconnected"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_internet_warning"
-            android:tint="@color/white"
-            app:fab_colorNormal="@color/primaryColor"
-            app:fab_colorPressed="@color/primaryDarkColor"
-            app:fab_colorRipple="@color/primaryColor"
-            app:fab_label="Potensi Gangguan"
-            app:fab_size="normal" />
+            app:fab_icon="@drawable/ic_internet_warning"
+            app:label_backgroundColor="@color/secondaryColor"
+            app:label_text="Potensi Gangguan"
+            app:maxImageSize="30dp" />
 
-    </com.github.clans.fab.FloatingActionMenu>
+    </com.nambimobile.widgets.efab.ExpandableFabLayout>
+
+<!--    <com.github.clans.fab.FloatingActionMenu-->
+<!--        android:id="@+id/menu"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:padding="10dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:menu_animationDelayPerItem="50"-->
+<!--        app:menu_buttonSpacing="0dp"-->
+<!--        app:menu_colorNormal="@color/secondaryColor"-->
+<!--        app:menu_colorPressed="@color/secondaryDarkColor"-->
+<!--        app:menu_colorRipple="@color/secondaryColor"-->
+<!--        app:menu_fab_size="normal"-->
+<!--        app:menu_icon="@drawable/ic_filter"-->
+<!--        app:menu_labels_colorNormal="@color/primaryDarkColor"-->
+<!--        app:menu_labels_cornerRadius="8dp"-->
+<!--        app:menu_labels_ellipsize="none"-->
+<!--        app:menu_labels_hideAnimation="@anim/fab_scale_down"-->
+<!--        app:menu_labels_margin="0dp"-->
+<!--        app:menu_labels_maxLines="-1"-->
+<!--        app:menu_labels_padding="8dp"-->
+<!--        app:menu_labels_position="left"-->
+<!--        app:menu_labels_showAnimation="@anim/fab_scale_up"-->
+<!--        app:menu_labels_showShadow="true"-->
+<!--        app:menu_labels_singleLine="false"-->
+<!--        app:menu_labels_textColor="#FFFFFF"-->
+<!--        app:menu_labels_textSize="14sp"-->
+<!--        app:menu_openDirection="up"-->
+<!--        app:menu_shadowColor="#66000000"-->
+<!--        app:menu_shadowRadius="4dp"-->
+<!--        app:menu_shadowXOffset="1dp"-->
+<!--        app:menu_shadowYOffset="3dp"-->
+<!--        app:menu_showShadow="true">-->
+
+<!--        <com.github.clans.fab.FloatingActionButton-->
+<!--            android:id="@+id/fab_isolation"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:src="@drawable/ic_block_user"-->
+<!--            app:fab_colorNormal="@color/primaryColor"-->
+<!--            app:fab_colorPressed="@color/primaryDarkColor"-->
+<!--            app:fab_colorRipple="@color/primaryColor"-->
+<!--            app:fab_label="User Isolir"-->
+<!--            app:fab_size="normal" />-->
+
+<!--        <com.github.clans.fab.FloatingActionButton-->
+<!--            android:id="@+id/fab_disconnected"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:src="@drawable/ic_internet_warning"-->
+<!--            android:tint="@color/white"-->
+<!--            app:fab_colorNormal="@color/primaryColor"-->
+<!--            app:fab_colorPressed="@color/primaryDarkColor"-->
+<!--            app:fab_colorRipple="@color/primaryColor"-->
+<!--            app:fab_label="Potensi Gangguan"-->
+<!--            app:fab_size="normal" />-->
+
+<!--    </com.github.clans.fab.FloatingActionMenu>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
